Fixed parsed JSON overflowing issue

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,6 +5,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 .pretty-json-container {
     font-family: "Courier New", Courier, monospace;
     white-space: pre;
+    overflow-x: auto;
 }
 .pretty-json-container span.value-string {
     color: #0000FF;
